finish personnel site

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ address:
 # Credits content
 credits: 
   - line: Email- darkoservantes@outlook.com
-  - line: Phone- 
+  - line: Phone- (+389) 078 595 943
 
 # Build settings
 markdown: kramdown
